<?xml version="1.0"?>
<package>
  <name>smarthome_comm_msgs</name>
  <version>0.1.19</version>
  <description>This package is comm message for ROS.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickael Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
